css/style.css
/* Fonts */
h1,
h2,
h3,
h4,
h5,
h6,
p,
qoute,
li,
ul,
ol,
a,
button {
  color: white;
  font-family: Helvetica, sans-serif, arial;
}

h1 {
  font-size: 43px;
  /*   padding-bottom: 0.8%; */
  line-height: 1.3;
  width: 100%;
}

h2 {
  font-size: 36px;
  padding-bottom: 20px;
  line-height: 1;
  width: 100%;
}

h3 {
  font-size: 28px;
  padding-bottom: 20px;
  line-height: 0.8;
  width: 100%;
}

h4 {
  font-size: 20px;
  padding-bottom: 20px;
}

h5 {
  font-size: 16px;
  padding-bottom: 20px;
}

h6 {
  font-size: 14px;
  padding-bottom: 16px;
}

p {
  font-size: 16px;
  padding-bottom: 6px;
}

qoute {
  font-size: 26px;
  padding-bottom: 13px;
}

.anchors a {
  font-size: 25px;
}

@media screen and (min-width: 380px) and (max-width: 590px) {
  body {
    margin: 5px 1px 11px 1px !important;
  }
  .banner {
    padding: 0px 12px 0 12px;
  }
  h1 {
    font-size: 36px;
  }
  h1:hover {
    color: white;
  }
  h2 {
    font-size: 28px;
  }
  h2:hover {
    color: white;
  }
  h3 {
    font-size: 24px;
  }
  h3:hover {
    color: white;
  }
  h4 {
    font-size: 20px;
  }
  h4:hover {
    color: white;
  }
  h5 {
    font-size: 17px;
  }
  h5:hover {
    color: white;
  }
  h6 {
    font-size: 11px;
  }
  h6:hover {
    color: white;
  }
  p {
    font-size: 18px;
    padding-bottom: 8px;
  }
  p:hover {
    color: white;
  }
  quote {
    font-size: 26px;
  }
  img {
    width: 100%;
  }
  .flex-area-alignment {
    padding-bottom: 31px;
    display: flex;
    flex-direction: column;
  }
  .flex-area-alignment .banner-area-first-about {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    padding-bottom: 20px;
  }
  .image-layer {
    position: relative;
    top: 0px;
    z-index: -1;
    left: 0px;
  }
  .flex-area-alignment {
    padding: 0px 12px 0 12px;
  }
  .flex-area-alignment .banner-area-first-about {
    height: auto;
    width: 100%;
    padding: 0px !important;
    padding: 64px 3px 4px 0px !important;
  }
  .anchors {
    padding-bottom: 66px;
    margin-top: -26% !important;
  }
  .floating-mnu {
    font-size: 7px;
    height: 1px !important;
  }
  .floating-mnu a {
    font-size: 0.2em;
    display: block;
  }
  .floating-mnu a a:hover {
    font-size: 0.1em;
  }
}
/*secondary color*/
/*article page colors*/
/*banner color scheme*/
/*GENTIC FONT COLOR*/
/* Gradiants  */
/*fonts*/
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

img {
  width: 100%;
}

nav {
  background-image: linear-gradient(to bottom, rgba(2, 0, 36, 0) 0%, rgba(255, 255, 255, 0.898) 56%, rgba(255, 42, 0, 0.513) 100%);
}
nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
  display: inherit;
}
nav li {
  display: flex;
}
nav a {
  display: flex;
  text-decoration: none;
}

body {
  background-color: #4e4e50;
  margin: 0;
}

button {
  width: 4em;
  height: 8ex;
  border-radius: 10px;
  font-weight: bold;
  cursor: pointer;
}
button :hover {
  color: #9d00ff;
  font-weight: bold;
}

.para-area {
  font-weight: bold;
  /* incorrect spelling of the color property */
  font-size: 160%;
}
.para-area span {
  background-color: #9d00ff;
}

.button-nav {
  font-family: "helvetica neue", helvetica, sans-serif;
  letter-spacing: 1px;
  text-transform: uppercase;
  text-align: center;
  border-radius: 10px;
  padding: 3px 10px;
  display: inline-block;
  cursor: pointer;
}

a {
  transition: background-color 0.7s;
  text-decoration: none;
}
a :hover {
  text-decoration: none;
  background-color: #3500D3;
}

.navbar {
  overflow: hidden;
  font-family: Helvetica, sans-serif, arial;
  padding: 1px 13px 0px 18px;
}

/* Links inside the navbar */
.navbar a {
  float: left;
  font-size: 16px;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

/* The dropdown container */
.dropdown {
  float: left;
  overflow: hidden;
}

/* Dropdown button */
.dropdown .dropbtn {
  font-size: 16px;
  border: none;
  outline: none;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  /* Important for vertical align on mobile phones */
  margin: 0;
  /* Important for vertical align on mobile phones */
}

/* Add a red background color to navbar links on hover */
/* Dropdown content (hidden by default) */
.dropdown-content {
  display: none;
  background-color: rgba(0, 0, 0, 0.1764705882);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
}

/* ANCHOR --Links inside the dropdown */
.dropdown-content a {
  float: none;
  color: rgb(255, 255, 255);
  padding: 12px 16px;
  text-decoration: none;
  display: flex;
  text-align: left;
}

/* ANCHOR Add a grey background color to dropdown links on hover */
.dropdown-content a:hover {
  background-color: #ddd;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: flex;
}
.dropdown:hover .dropdown-content .button {
  border: 1px solid black;
}
.dropdown:hover .dropdown-content .banner-bg-main {
  padding: 0px 7px 27px 10px;
  border-top-left-radius: 7%;
  border-top-right-radius: 33%;
  border-bottom-right-radius: 13%;
  border-bottom-left-radius: 17%;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: flex-start;
  align-self: center;
}
.dropdown:hover .dropdown-content .one,
.dropdown:hover .dropdown-content .two,
.dropdown:hover .dropdown-content .three,
.dropdown:hover .dropdown-content .four,
.dropdown:hover .dropdown-content .five,
.dropdown:hover .dropdown-content .six {
  flex: 1 auto;
  padding-bottom: 1px;
}
.dropdown:hover .dropdown-content .nested {
  display: contents;
}

.flex-area-alignment {
  display: flex;
  flex-wrap: nowrap;
  align-content: space-around;
  justify-content: space-evenly;
  align-items: stretch;
  padding-bottom: 36px;
}
.flex-area-alignment .banner-area-first-about {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}
.flex-area-alignment .banner-area-second-art {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}

.background-color {
  background-color: #baa7ad;
}
.background-color .flex-area-alignment {
  padding-left: 2px;
  padding-right: 2px;
}
.background-color .flex-area-alignment .banner-area-first-about {
  width: 100%;
  height: auto;
}
.background-color .flex-area-alignment .banner-area-first-about img {
  margin-left: 4%;
  position: relative;
  width: 74%;
  height: auto;
  z-index: -1;
}
.background-color .flex-area-alignment .banner-area-second-art {
  width: 100%;
  height: auto;
}
.background-color .flex-area-alignment .banner-area-second-art img {
  margin-left: 4%;
  position: relative;
  width: 74%;
  height: auto;
  z-index: -1;
}

.head-one,
.head-two,
.head-three,
.head-four,
.head-five,
.head-six,
.head-seven {
  margin: 10px 9px 6px 12px;
}

.para-over-lap {
  position: relative;
  top: -91px;
  left: 9px;
  z-index: 11;
  padding: 4px 8px 0px 4px;
}

.hero-title {
  /*  padding-bottom: 3%; */
  padding: 8px 7px 0px 21px;
}

header {
  color: #f1ecec;
  background-image: src("./src/images/DSC_0356.jpg");
  background: linear-gradient(rgb(51, 51, 51) 0%, rgba(255, 255, 255, 0.37) 56%, rgba(255, 42, 0, 0.2) 100%);
  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background-size: cover;
  background-repeat: no-repeat;
  margin-top: 2%;
}

.container {
  position: absolute;
}

.image-layer {
  position: relative;
  top: 0px;
  z-index: -1;
  left: 0px;
}

.floating-mnu {
  font-family: sans-serif;
  background-color: rgba(186, 167, 173, 0.1803921569);
  padding-top: 1px;
  margin-top: -5px;
  text-align: center;
  display: flex;
  width: 100%;
  height: 10%;
  justify-content: center;
}
.floating-mnu a {
  font-size: 1.5em;
  display: block;
  margin: 8px 1.5em;
}
.floating-mnu a a:hover {
  font-size: 1.3em;
}
.floating-mnu a a:active {
  font-size: 1.9em;
  transition: font-size 0.8s;
}
.floating-mnu a:hover {
  font-size: 1.8em;
  transition: font-size 0.6s;
  cursor: pointer;
  text-decoration: none;
}

.ftr-era-body {
  background-color: #f1ecec;
}
.ftr-era-body .contact-details {
  position: absolute;
  left: 56px;
}
.ftr-era-body .img-logo {
  position: absolute;
  left: 591px;
}
.ftr-era-body .links-contacts {
  position: absolute;
  left: 317px;
}

/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

/* Make the images invisible by default */
.Containers {
  display: none;
}

/* forward & Back buttons */
.Back,
.forward {
  cursor: pointer;
  position: absolute;
  top: 48%;
  width: auto;
  margin-top: -23px;
  padding: 17px;
  color: grey;
  font-weight: bold;
  font-size: 19px;
  transition: 0.4s ease;
  border-radius: 0 5px 5px 0;
}

/* Place the "forward button" to the right */
.forward {
  right: 0;
  border-radius: 4px 0 0 4px;
}

/*when the user hovers,add a black background with some little opacity */
.Back:hover,
.forward:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Caption Info */
.Info {
  color: #e3e3e3;
  font-size: 16px;
  padding: 10px 14px;
  position: absolute;
  bottom: 10px;
  width: 100%;
  text-align: center;
}

/* Worknumbering (1/3 etc) */
.MessageInfo {
  color: #f2f2f3;
  font-size: 14px;
  padding: 10px 14px;
  position: absolute;
  top: 0;
}

/* The circles or bullets and indicators */
.dots {
  cursor: pointer;
  height: 60px;
  width: 60px;
  margin: 0 3px;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 2s ease;
}

.enable,
.dots:hover {
  background-color: #717161;
}

/* Faint animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1s;
  animation-name: fade;
  animation-duration: 1s;
}

@-webkit-keyframes fade {
  from {
    opacity: 1, 3;
  }
  to {
    opacity: 2;
  }
}
@keyframes fade {
  from {
    opacity: 1, 3;
  }
  to {
    opacity: 2;
  }
}
.header-area {
  padding: 1px 3px 6px 36px;
}

/*# sourceMappingURL=style.css.map */

